--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^1.5.1",
     "next": "13.5.4",
+    "postcss": "^8.4.31",
+    "postcss-nested": "^6.0.1",
     "react": "^18",
     "react-dom": "^18"
   },
