--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "chart.js": "^4.4.0",
     "next": "13.5.4",
@@ -16,7 +17,8 @@
     "postcss-nested": "^6.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
