merge: with patricia, db is working, feat: omw making the login component

--- a/server/config/database.yml
+++ b/server/config/database.yml
@@ -3,7 +3,7 @@ development:
   encoding: unicode
   database: Vitality Hub
   pool: 5
-  username: postgres
-  password: admin
+  username: hongnhungpham
+  password: janilo01
   host: localhost
   port: 5432
