fix: change to migrations, feat: add jwt_helper with verify and generator, add create record, add cors

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -51,6 +51,8 @@ gem 'email_validator', '~> 2.2', '>= 2.2.4'
 
 gem 'jwt', '~> 2.7', '>= 2.7.1'
 
+gem 'rack-cors', require: 'rack/cors'
+
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri windows ]
