--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
+    "@types/cheerio": "^0.22.32",
     "axios": "^1.5.1",
     "chart.js": "^4.4.0",
+    "cheerio": "^1.0.0-rc.12",
     "next": "13.5.4",
     "postcss": "^8.4.31",
-    "postcss-nested": "^6.0.1"
+    "postcss-nested": "^6.0.1",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
