--- a/server/Rakefile
+++ b/server/Rakefile
@@ -4,4 +4,5 @@
 require_relative "config/application"
 
 Rails.application.load_tasks
-import '.\app\lib\tasks\scrape_recipes.rake'
+
+import './app/lib/tasks/scrape_recipes.rake'
