--- a/server/Gemfile
+++ b/server/Gemfile
@@ -1,6 +1,8 @@
 source "https://rubygems.org"
 
-gem 'dotenv-rails', groups: [:development, :test]
+group :development, :test do
+  gem 'dotenv-rails'
+end
 
 ruby "3.2.2"
 
