feat: add toggle for both recipes and exercises, models, types missing some gets, scrape of exercises

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -5,3 +5,4 @@ require_relative "config/application"
 
 Rails.application.load_tasks
 import '.\app\lib\tasks\scrape_recipes.rake'
+import '.\app\lib\tasks\scrape_exercises.rake'
