--- a/server/config/database.yml
+++ b/server/config/database.yml
@@ -7,3 +7,7 @@ development:
   password: <%= ENV['DB_PASSWORD'] %>
   host: <%= ENV['DB_HOST'] %>
   port: 5432
+
+test:
+  adapter: postgresql
+  database: <%= ENV['DATABASE'] %>
