--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.1",
     "chart.js": "^4.4.0",
     "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.3.1",
     "next": "13.5.4",
     "postcss": "^8.4.31",
     "postcss-nested": "^6.0.1",
