--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
@@ -14,6 +15,7 @@
     "chart.js": "^4.4.0",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
+    "jest-environment-jsdom": "^29.7.0",
     "next": "13.5.4",
     "postcss": "^8.4.31",
     "postcss-nested": "^6.0.1",
@@ -23,9 +25,20 @@
     "react-redux": "^8.1.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-typescript": "^7.23.2",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5"
+    "babel-jest": "^29.7.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-dom": "^4.0.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.2.2"
   }
 }
