--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,6 +1,36 @@
-name: frontendTesting
-run-name: ${{ github.actor }} is testing her frontend
-on: [push]
+# name: frontendTesting
+# run-name: ${{ github.actor }} is testing her frontend
+# on: [push]
+# jobs:
+#   run-defined-frontend-tests:
+#     runs-on: ubuntu-latest
+#     defaults:
+#       run:
+#         working-directory: ./client
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: actions/setup-node@v3
+#         with:
+#           node-version: '20'
+#       - run: npm ci
+#       - run: npm run test
+
+#   run-defined-backend-tests:
+#     runs-on: ubuntu-latest
+#     defaults:
+#       run:
+#         working-directory: ./server
+#     steps:
+#       - uses: actions/checkout@v3
+
+    
+name: frontendAndBackendTesting
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   run-defined-frontend-tests:
     runs-on: ubuntu-latest
@@ -11,36 +41,36 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: '14'
       - run: npm ci
       - run: npm run test
 
   run-defined-backend-tests:
-        runs-on: ubuntu-latest
-        defaults:
-          run:
-            working-directory: ./server
-        steps:
-          - uses: actions/checkout@v3
-    
-          - name: Set up Ruby
-            uses: actions/setup-ruby@v1
-            with:
-              ruby-version: 3.2.2
-    
-          - name: Install Bundler
-            run: gem install bundler -v 2.4.20
-          - name: Install Dependencies
-            run: bundle install
-    
-   
-          - name: Set up test database
-            run: |
-              cp config/database.yml.example config/database.yml
-              RAILS_ENV=test bin/rails db:create
-              RAILS_ENV=test bin/rails db:migrate
-    
-         
-          - name: Run RSpec tests
-            run: bundle exec rspec
-    
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./server
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Set up Ruby
+        uses: actions/setup-ruby@v1
+        with:
+          ruby-version: 3.0.2
+     
+
+      - name: Install Bundler
+        run: gem install bundler -v 2.2.26
+      - name: Install Dependencies
+        run: bundle install
+  
+
+      - name: Set up test database
+        run: |
+          cp config/database.yml.example config/database.yml
+          RAILS_ENV=test bin/rails db:create
+          RAILS_ENV=test bin/rails db:migrate
+      
+     
+      - name: Run RSpec tests
+        run: bundle exec rspec
