deployment: be github/workflows

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,9 +30,14 @@ jobs:
 
       - name: Install Dependencies
         run: bundle install
-
-      - name: Configure test database
-        run: cp config/database.yml
+      - name: Set up environment variables
+        run: |
+          echo "DATABASE=${{ secrets.DATABASE }}" >> $GITHUB_ENV
+          echo "TEST_DB=${{ secrets.TEST_DB }}" >> $GITHUB_ENV
+          echo "DB_USER=${{ secrets.DB_USER }}" >> $GITHUB_ENV
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> $GITHUB_ENV
+          echo "DB_HOST=${{ secrets.DB_HOST }}" >> $GITHUB_ENV
+     
 
       - name: Create and migrate test database
         run: |
