--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -41,8 +41,8 @@ jobs:
 
       - name: Create and migrate test database
         run: |
-          RAILS_ENV=test bin/rails db:create
-          RAILS_ENV=test bin/rails db:migrate
+          RAILS_ENV=test rails db:create
+          RAILS_ENV=test rails db:migrate
       
       - name: Run RSpec tests
         run: bundle exec rspec
