--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,38 +15,57 @@ jobs:
       - run: npm ci
       - run: npm run test
 
-  docker:
+  # docker:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     -
+  #       name: Checkout
+  #       uses: actions/checkout@v3
+      # -
+      #   name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v2
+      # -
+      #   name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v2
+      # -
+      #   name: Login to Docker Hub
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # -
+      #   name: Build and push server image
+      #   uses: docker/build-push-action@v4
+      #   with:
+      #     push: true
+      #     tags: rosalina1309/vitality-hub-server:latest, rosalina1309/vitality-hub-server:${{ github.sha }}
+      #     platforms: linux/amd64,linux/arm64
+      #     context: server
+
+      # -
+      #   name: Build and push client image
+      #   uses: docker/build-push-action@v4
+      #   with:
+      #     push: true
+      #     tags: rosalina1309/vitality-hub-client:latest, rosalina1309/vitality-hub-client:${{ github.sha }}
+      #     platforms: linux/amd64,linux/arm64
+      #     context: client
+
+  k8s:
     runs-on: ubuntu-latest
     steps:
       -
         name: Checkout
         uses: actions/checkout@v3
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v2
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push server image
-        uses: docker/build-push-action@v4
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-central-1
+      - name: rollout deployment
+        uses: kodermax/kubectl-aws-eks@master
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
         with:
-          push: true
-          tags: rosalina1309/vitality-hub-server:latest, rosalina1309/vitality-hub-server:${{ github.sha }}
-          platforms: linux/amd64,linux/arm64
-          context: server
-
-      -
-        name: Build and push client image
-        uses: docker/build-push-action@v4
-        with:
-          push: true
-          tags: rosalina1309/vitality-hub-client:latest, rosalina1309/vitality-hub-client:${{ github.sha }}
-          platforms: linux/amd64,linux/arm64
-          context: client
+          args: rollout restart deployment vitality-hub -n default
