--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           ruby-version: 3.2.2
       - name: Build and run test
-        working-directory: server
+        working-directory: ./server
         env:
           DATABASE_URL: postgres://postgres:admin@localhost:5432/VH_Test
           RAILS_ENV: test
