--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,24 +15,25 @@ jobs:
       - run: npm ci
       - run: npm run test
 
-  # docker:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     -
-  #       name: Checkout
-  #       uses: actions/checkout@v3
-      # -
-      #   name: Set up QEMU
-      #   uses: docker/setup-qemu-action@v2
-      # -
-      #   name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v2
-      # -
-      #   name: Login to Docker Hub
-      #   uses: docker/login-action@v2
-      #   with:
-      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+  docker:
+    needs: run-defined-frontend-tests
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       # -
       #   name: Build and push server image
       #   uses: docker/build-push-action@v4
@@ -42,16 +43,17 @@ jobs:
       #     platforms: linux/amd64,linux/arm64
       #     context: server
 
-      # -
-      #   name: Build and push client image
-      #   uses: docker/build-push-action@v4
-      #   with:
-      #     push: true
-      #     tags: rosalina1309/vitality-hub-client:latest, rosalina1309/vitality-hub-client:${{ github.sha }}
-      #     platforms: linux/amd64,linux/arm64
-      #     context: client
+      -
+        name: Build and push client image
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: rosalina1309/vitality-hub-client:latest, rosalina1309/vitality-hub-client:${{ github.sha }}
+          platforms: linux/amd64,linux/arm64
+          context: client
 
   k8s:
+    needs: [run-defined-frontend-tests,docker]
     runs-on: ubuntu-latest
     steps:
       -
