deployment with backend tests

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,6 +15,40 @@ jobs:
       - run: npm ci
       - run: npm run test
 
+  run-defined-backen-tests:
+      runs-on: ubuntu-latest
+  
+      services:
+        postgres:
+          image: postgres:15.4
+          env:
+            POSTGRES_USER: postgres
+            POSTGRES_PASSWORD: admin
+          ports: ['5432:5432']
+          options: --health-cmd pg_isready
+            --health-interval 10s
+            --health-timeout 5s
+            --health-retries 5
+      steps:
+        - uses: actions/checkout@v4
+        - name: Setup Ruby
+          uses: ruby/setup-ruby@v1
+          with:
+            ruby-version: 3.2.2
+        - name: Build and run test
+          working-directory: ./server
+          env:
+            DATABASE_URL: postgres://postgres:admin@localhost:5432/VH_Test
+            RAILS_ENV: test
+            POSTGRES_USER: postgres
+            POSTGRES_PASSWORD: admin
+          run: |
+            sudo apt-get -yqq install libpq-dev
+            gem install bundler:2.4.10
+            bundle install
+            bundle exec rails db:create
+            bundle exec rails db:migrate
+            bundle exec rspec --format documentation
   docker-image-build:
     needs: run-defined-frontend-tests
     runs-on: ubuntu-latest
